samples/_failures_safe/1761428722_b74c42_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7e70c097.c: In function ‘matrix_print’:
./samples/SAFE/__tmp_7e70c097.c:144: error: expected ‘{’ at end of input
